<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:background="@color/background">

    <ImageView
        android:id="@+id/promo_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/garage"
        android:adjustViewBounds="true"
        android:contentDescription="@string/main_image" />

    <TextView
        android:id="@+id/caption"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:paddingRight="16dp"
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/captionText"/>

    <TextView
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/caption"
        android:text="@string/slogan"
        android:textSize="16sp"
        android:textColor="#000000"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/promo_picture"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/baseline_place_black_18dp"
                android:contentDescription="@string/place_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4dp"
                android:paddingLeft="12dp"
                android:paddingStart="12dp"
                android:text="@string/business_address"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_phone_black_24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/phone_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingStart="12dp"
                android:text="@string/phone"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:background="@color/button"
            android:drawableLeft="@drawable/baseline_email_black_24dp"
            android:drawableStart="@drawable/baseline_email_black_24dp"
            android:fontFamily="monospace"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="@string/button_email"
            android:textAllCaps="false" />
    </LinearLayout>
</RelativeLayout>